# remote_toys

./: .gitignore  README.md  pyproject.toml
parter_poker/: partner.py  sse.py
parter_poker/static/css/: styles.css
parter_poker/static/js/: main.js
parter_poker/static/sass/: _base.scss
parter_poker/templates/: index.html
run/: run.py
